Test_two/notas.txt



Nodemon me rebota con esto:

file:///C:/Logos/Root/Personal_proyects/Digitalizer/Test_two/app.js:2
const express = require("express");
                ^

ReferenceError: require is not defined
    at file:///C:/Logos/Root/Personal_proyects/Digitalizer/Test_two/app.js:2:17
    at ModuleJob.run (internal/modules/esm/module_job.js:152:23)
    at async Loader.import (internal/modules/esm/loader.js:166:24)
    at async Object.loadESM (internal/process/esm_loader.js:68:5)
[nodemon] app crashed - waiting for file changes before starting...


Y la respeusta a mis problemas parece se resto...
https://stackoverflow.com/questions/19059580/client-on-node-js-uncaught-referenceerror-require-is-not-defined


Peor no lo entiendo todavía.
▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬


Buenas noches masters: 

Soy nuevo en Node/Express y toda la magia detrás,  ando necesitando que una cosa del back se renderice en front

Estoy teniendo este error:

```javascript
const express = require("express");
                ^

ReferenceError: require is not defined
```

He leído de aquí:



Entiendo que el código no se meustra así como así, instalé Require.js, y también ejs que en teoría me permite mostrar código js en navegador y aún arroja error.
1. Quisiera saber si estoy entendiendo bien lo que hace cada cosa


Alguna sugerencia masters?